# unique-program-library

./: .gitignore  Anchor.toml  Cargo.toml  README.md  chainTraitsRefactor.json  package-lock.json  package.json
chain-traits/: .gitignore  .solitarc.js  README.md  chain-traits.json
chain-traits/idl/: chain_traits.json
chain-traits/program/: Cargo.toml
chain-traits/program/idl/: on_chain_traits.json
chain-traits/program/src/: entrypoint.rs  errors.rs  instruction.rs  lib.rs  utils.rs
chain-traits/program/src/processor/: create_trait.rs  create_trait_config.rs  mod.rs  process_create_trait.rs  process_create_trait_config.rs
chain-traits/program/src/state/: mod.rs  trait_config.rs  trait_data.rs
chain-traits/program/tests/: process_create_trait.rs  process_create_trait_config.rs
chain-traits/program/tests/utils/: mod.rs  nft.rs  nft_state.rs  traits.rs
chain-traits/wallets/: addingTraits.json  mutableRef.json  oldChainTraits.json
delegation-manager/: README.md
delegation-manager/civic_example/: Cargo.toml
delegation-manager/civic_example/src/: lib.rs
delegation-manager/cli/: Cargo.toml
delegation-manager/cli-vanila/: Cargo.toml
delegation-manager/cli-vanila/src/: main.rs
delegation-manager/cli/src/: config.rs  main.rs
delegation-manager/example/: Cargo.toml
delegation-manager/example/src/: lib.rs
delegation-manager/examples/civic_example/: Cargo.toml  README.md
delegation-manager/examples/civic_example/src/: lib.rs
delegation-manager/examples/counter_example/: Cargo.toml  README.md
delegation-manager/examples/counter_example/src/: lib.rs
delegation-manager/js-sdk/: README.md  tsconfig.json
delegation-manager/js-sdk/src/: api.ts  index.ts
delegation-manager/js-sdk/src/common/: constants.ts  utils.ts
delegation-manager/js-sdk/src/idl/: udm-idl.ts
delegation-manager/js-sdk/testing/: index.js  package-lock.json  package.json
delegation-manager/program/: Cargo.toml  README.md
delegation-manager/program-vanila/: Cargo.toml
delegation-manager/program-vanila/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
delegation-manager/program/src/: lib.rs
delegation-manager/typescript-sdk/: package-lock.json  package.json
delegation-manager/typescript-sdk/src/common/: interfaces.ts
programs/delegate-manager/: Cargo.toml
programs/delegate-manager/src/: lib.rs
programs/delegation-manager/: Cargo.toml
programs/delegation-manager/src/: lib.rs
programs/example/: Cargo.toml
programs/example/src/: lib.rs
tests/: delegate-manager.ts  delegation-manager.js  delegation-manager.ts
wallets/: chainTraitsBytes.json  example.json  newChainTraits.json  unique-test-wallet.json
