[workspace]
members = [
    "delegation-manager/program",
    "delegation-manager/examples/counter_example",
    "delegation-manager/examples/civic_example",
    "delegation-manager/cli",
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
