[workspace]
members = [
    "delegation-manager/program",
    "delegation-manager/example",
    "delegation-manager/cli",
    "chain-traits/program"
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
