[package]
name = "chain-traits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shank = "0.0.12"
solana-program = "1.14.12"
thiserror = "1.0.35"
borsh = "0.9.3"
num-derive = "0.3"
num-traits = "0.2"
spl-token =  "3.5"
spl-associated-token-account = "1.1.2"
mpl-token-metadata = {version="1.8.5",features=["no-entrypoint"]}
itertools = "0.10.5"

[features]
test-bpf = []
no-entrypoint = []

[dev-dependencies]
solana-program-test = "1.10.41"
solana-sdk = "1.14.12"
serde_derive = "1.0.152"
serde = "1.0.152"
reqwest = "0.11.14"
serde_json = "1.0"
solana-logger = "1.14.2"

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"
