[package]
name = "cli"
version = "0.1.0"
edition = "2021"
description = "Unique.vc's Delegation Manager Program's CLI"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
solana-clap-utils = "=1.14.12" 
solana-cli-config = "=1.14.12"
solana-cli-output = "=1.14.12"
solana-client = "=1.14.12"
solana-remote-wallet = "=1.14.12"
solana-sdk = "=1.14.12"
strum = "0.24"
strum_macros = "0.24"
tokio = "1.14"
upl-delegation-manager = { path = "../program/" }
anchor-client = "0.26.0"
prettytable = "0.10.0"
fastcmp = "1.0.1"

[[bin]]
name = "upl-delegation-manager"
path = "src/main.rs"