[package]
name = "delegation-manager-vanila"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]
name = "delegation_manager_vanila"

[dependencies]
solana-program = "1.14.10"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.4"
thiserror = "1.0"
borsh = "0.9.3"