[package]
name = "upl-delegation-manager"
version = "0.1.1"
description = "Unique Account Delegation Manager Program"
authors = ["Unique.VC <office@unique.vc>"]
repository = "https://github.com/unqclub/unique-program-library"
license = "Apache-2.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "lib"]
name = "delegation_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
