[package]
name = "civic_example"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "civic_example"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.26.0", features = ["init-if-needed"]}
upl-delegation-manager = { path = "../../program/", features = ["no-entrypoint"]}
solana-gateway = "0.2.2"
